--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "version": 2,
     "name": "pakbevv",
-    "builds": [{ "src": "node app.js", "use": "@vercel/node" }],
-    "routes": [{ "src": "/(.*)", "dest": "./routes/index.js" }]
+    "builds": [{ "src": "node app.js", "use": "@vercel/node" }]
+
   }
   
